# c-triangles

./: Alphabets1.c  Alphabets2.c  CMakeLists.txt  Number1.c  Number2.c  Number3.c  Number4.c  README.md  Star1.c  Star2.c  Star3.c  Star4.c  Star5.c  Star6.c  a.out
